=== 1.9.12 ===
2007-01-29  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile:
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	* po/fr.po:
	* po/kiwi.pot:
	* po/pt_BR.po:
	* po/sv.po:

	1.9.12

2007-01-19  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (_ComboEntryPopup.set_selected_iter): 
	Try setting the full model if everything else fails.
	Based on patch by Goedson Teixeira Paixao

	Fixes #3099.

2006-11-11  Marco Antonio Porcho Souza  <maporcho@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_BaseDateTimeConverter._convert_format): 
	Use YYYY/mm/dd instead %Y/%m/%d in error messages.

	Fixes #3041.

2007-01-16  Johan Dahlin  <jdahlin@async.com.br>

	* po/fr.po: Added French translation contributed by Benoit Myard.

2006-12-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/log.py (ReversedGlobalFilter.filter): Use >= instead of >

	* tests/test_log.py (LogTest.testStdErr): Add tests warnings
	printed on the console and to a log file.

	Fixes #2984

2006-12-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.set_visible_rows): Impl.

2006-11-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (listpackages): Provide better error messages.

2006-11-11  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/hyperlink.py: Make sure the hyperlink stays within
	it's own allocation. Fixes #2923

2006-11-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectTree._append_internal): Allow
	specify parents which are objects inserted in the tree.
	(ObjectTree.collapse, ObjectTree.expand): New methods, suggested
	by the incredible Ali
	(ObjectTree): kill ObjectRow, operate on instances inserted into
	the tree instead, to simplify the API

2006-10-29  Johan Dahlin  <johan@gnome.org>

	* kiwi/datatypes.py:
	* kiwi/ui/objectlist.py:
	* examples/list/enumcombo.py: