@@ -1,3 +1,10 @@
+2007-01-31  Ronaldo Maia <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/icon.py: Fix workaround for recompute and call it after
+	showing an icon on a widget.
+
 === 1.9.12 ===
 2007-01-29  Johan Dahlin  <jdahlin@async.com.br>
 
